--- a/contact-us.html
+++ b/contact-us.html
@@ -74,7 +74,7 @@
                             </div>
                         </div>
                         <div class="col" style="margin-top: 53px;">
-                            <form style="padding-bottom: 40px;margin-bottom: 0;margin-top: 0;padding-top: 30px;height: 522px;">
+                            <form action="https://usebasin.com/f/4050552992ad" method="POST":  style="padding-bottom: 40px;margin-bottom: 0;margin-top: 0;padding-top: 30px;height: 522px;">
                                 <div class="mb-3"><label class="form-label" for="name">Name</label><input class="form-control" type="text" id="name" name="name" required=""></div>
                                 <div class="mb-3"><label class="form-label" for="subject">Subject</label><input class="form-control" type="text" id="subject" name="subject" required=""></div>
                                 <div class="mb-3"><label class="form-label" for="email">Email</label><input class="form-control" type="email" id="email" name="email" required=""></div>
